# torch-onnx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  WORKSPACE.bazel
transforms/: BUILD.bazel  CMakeLists.txt  passes.cpp  passes.h
