workspace(name = "torch-onnx")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "15f84594af9da06750ceb878abbf129241421e3abbd6e36893041188db67f2fb",
    strip_prefix = "rules_python-0.7.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.7.0.tar.gz",
)

# TODO: Switch to pip_install once https://github.com/bazelbuild/rules_python/issues/649
# is resolved.
# load("@rules_python//python:pip.bzl", "pip_install")

# # This only works in WORKSPACE, not BUILD files.
# pip_install(
#     name = "torch-mlir_pip",
#     # TODO: once rules_python is released again, use this
#     #     python_interpreter = interpreter,
#     requirements = "torch-mlir/requirements.txt",
# )

# load("@rules_python//python:repositories.bzl", "python_register_toolchains")
# python_register_toolchains(
#     name = "python310",
#     python_version = "3.10",
# )

http_archive(
    name = "rules_foreign_cc",
    sha256 = "bcd0c5f46a49b85b384906daae41d277b3dc0ff27c7c752cc51e43048a58ec83",
    strip_prefix = "rules_foreign_cc-0.7.1",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.7.1.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

# This sets up some common toolchains for building targets. For more details, please see
# https://bazelbuild.github.io/rules_foreign_cc/0.7.1/flatten.html#rules_foreign_cc_dependencies
rules_foreign_cc_dependencies()

BAZEL_TOOLCHAIN_TAG = "0.7"

BAZEL_TOOLCHAIN_SHA = "148e871e785ae699e6adfbb07afea241ee668dbc0c530e72a47356885fce0cb7"

http_archive(
    name = "com_grail_bazel_toolchain",
    canonical_id = BAZEL_TOOLCHAIN_TAG,
    sha256 = BAZEL_TOOLCHAIN_SHA,
    strip_prefix = "bazel-toolchain-{tag}".format(tag = BAZEL_TOOLCHAIN_TAG),
    url = "https://github.com/grailbio/bazel-toolchain/archive/{tag}.tar.gz".format(tag = BAZEL_TOOLCHAIN_TAG),
)

load("@com_grail_bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")

bazel_toolchain_dependencies()

load("@com_grail_bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")

llvm_toolchain(
    name = "llvm_toolchain",
    llvm_version = "13.0.0",
)

load("@llvm_toolchain//:toolchains.bzl", "llvm_register_toolchains")

llvm_register_toolchains()
